Fixing Docker Networking Quirks

--- a/EFCore.API/appsettings.json
+++ b/EFCore.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Postgres": "Host=localhost; Port=5432:5432; Database=MoviesDB; User Id=postgres; Password=password;"
+    "Postgres": "Host=localhost; Port=5432; Database=MoviesDB; Username=postgres; Password=password;"
   }
 }
