--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@
     container_name: db
     restart: unless-stopped
     environment:
-      POSTGRES_PASSWORD: ${ env.POSTGRES_PASSWORD }
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: MoviesDB
     ports:
       - "5432:5432"
