--- a/EFCore.API/Properties/launchSettings.json
+++ b/EFCore.API/Properties/launchSettings.json
@@ -4,6 +4,7 @@
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
+      "launchUrl": "scalar",
       "launchBrowser": true,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
