--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,5 @@
       POSTGRES_DB: MoviesDB
     ports:
       - "5432:5432"
+    volumes:
+      - "./db/seed.sql:/docker-entrypoint-initdb.d/seed.sql"
